--- a/07_estruturas_geotecnicas.qmd
+++ b/07_estruturas_geotecnicas.qmd
@@ -1,6 +1,6 @@
 # Estruturas Geotécnicas {#sec-estruturas}
 
-A tela Estruturas Geotécnicas exibe uma lista das estruturas cadastrados no Sisvar. Nesta tela, é possível gerenciar as estruturas geotécnicas, incluindo busca, visualização, edição e adição de novas estruturas (@figu-tela07).
+A tela Estruturas Geotécnicas exibe uma lista das estruturas cadastradas no Sisvar. Nesta tela, é possível gerenciar as estruturas geotécnicas, incluindo pesquisa, visualização, edição e adição de estruturas (@figu-tela07).
 
 ::: {#figu-tela07}
 ```{r}
@@ -12,12 +12,12 @@ Tela Estruturas Geotécnicas
 :::
 
 ## Criar
-Para adicionar uma nova estrutura geotécnica à lista, é imprescindível que os dados estejam corretos, especialmente as coordenadas geográficas. O fluxo de criação de uma nova estrutura geotécnica pode seguir dois caminhos:
+Para adicionar uma estrutura geotécnica à lista, é imprescindível que os dados estejam corretos, especialmente as coordenadas geográficas. O fluxo de criação de uma nova estrutura geotécnica pode seguir dois caminhos:
 
 ### Botão Nova Estrutura Geotécnica
-O usuário com Função de *Instituição Admin* pode criar uma **Nova Estrutura Geotécnica** preenchendo todos os campos obrigatórios do formulário (@figu-criar-estrutura).
+O usuário com Função de *Instituição Admin* pode criar uma **Estrutura Geotécnica** preenchendo todos os campos obrigatórios do formulário (@figu-criar-estrutura).
 
-::: callout
+::: callout-note
 ## Nota
 Ao criar uma estrutura geotécnica e não preencher os campos Latitude e Longitude, ela será automaticamente adicionada à lista de estruturas com pendências.
 :::
@@ -36,7 +36,7 @@ Tela Criar Estrutura Geotécnica
 
 2. Após validação, a lista-base de estruturas geotécnicas do Sisvar passa a constar a nova estrutura.
 
-3. O usuário da auditoria e o usuário com Função de ***Instituição Admin*** recebem um aviso (exclamação vermelha) informando que há estruturas geotécnicas pendentes de revisão (@figu-aviso).
+3. O usuário da auditoria e os usuários com Função de ***Instituição Admin*** recebem um aviso (exclamação vermelha) informando que há estruturas geotécnicas pendentes de revisão (@figu-aviso) (ao expandir a barra de menu, um quadrado vermelho com o número de pendências é exibido).
 
 ::: {#figu-aviso}
 ```{r}
@@ -47,12 +47,12 @@ knitr::include_graphics("images/07_estruturas_geotecnicas/aviso.png")
 Tela aviso
 :::
 
-4. O usuário da auditoria preenche as coordenadas. Há uma validação, numérica, para as coordenadas limites no estado de Minas Gerais;
+4. O usuário da auditoria preenche as coordenadas. Há uma validação, numérica, para as coordenadas referente aos limites do estado de Minas Gerais;
 
 5. O usuário com Função de ***Instituição Admin*** verifica manualmente se as coordenadas fazem sentido (é um local de mineração?).
 
 6. O usuário com Função de ***Instituição Admin*** valida ou não as coordenadas (@figu-validar-estrutura):
-- Em caso de não validação, o fluxo retorna automaticamente ao passo 3;
+- Em caso de reprovação, o fluxo retorna automaticamente ao passo 3;
 - Em caso de validação, o fluxo segue para o passo 7.
 
 ::: {#figu-validar-estrutura}
@@ -65,8 +65,11 @@ Tela Validar/Reprovar estrutura geotécnica
 :::
 
 7. O usuário com Função de ***Instituição Admin*** busca a estrutura geotécnica na lista-base e edita suas informações para incluir o complexo minerário/mina.
-    
-    **Obs.:** A edição de complexo minerário/mina pode ser realizada a qualquer momento, em qualquer estrutura geotécnica.
+
+:::callout-note
+## Nota
+A edição de complexo minerário/mina pode ser realizada a qualquer momento, em qualquer estrutura geotécnica.
+:::
 
 ## Procurar
 O usuário *Instituição Admin* pode localizar uma estrutura geotécnica utilizando a opção **Procurar** e filtrar por: Status, TAC, Nome, Município e Empreendedor (@figu-procurar-estrutura). 
@@ -81,7 +84,7 @@ Tela Procurar estrutura geotécnica
 :::
 
 ## Exibir
-Ao clicar no botão de ação **Exibir**, o usuário *Instituição Admin* pode visualizar as informações detalhadas da estrutura geotécnica, incluindo, quando aplicável, o motivo, quem e quando a estrutura foi reprovada, os nomes alternativos e o histórico da estrutura geotécnica (@figu-exibir-estrutura). 
+Ao clicar no botão de ação **Exibir**, o usuário *Instituição Admin* pode visualizar as informações detalhadas da estrutura geotécnica, incluindo, quando aplicável, o motivo da reprovação, quem e quando a reprovou, os nomes alternativos e o histórico da estrutura geotécnica (@figu-exibir-estrutura). 
 
 ::: {#figu-exibir-estrutura}
 ```{r}
