--- a/06_tacs.qmd
+++ b/06_tacs.qmd
@@ -1,6 +1,6 @@
 # TACs {#sec-tacs}
 
-A tela TACs exibe uma lista dos TACs cadastrados no Sisvar, organizadas em ordem alfabética. Nesta tela, é possível gerenciar os TACs, incluindo busca, edição, exclusão e adição de novos TACs, além da exibição para o envio e validação de planilhas-modelo (@figu-tela06).
+A tela TACs exibe uma lista dos TACs cadastrados no Sisvar, organizados em ordem alfabética. Nesta tela, é possível gerenciar os TACs, incluindo pesquisa, edição, exclusão e adição de novos TACs, além da exibição para o envio e validação de planilhas-modelo (@figu-tela06).
 
 ::: {#figu-tela06}
 ```{r}
@@ -12,7 +12,7 @@ Tela TACs
 :::
 
 ## Criar
-O usuário com Função de *Instituição Admin* pode criar um **Novo TAC** preenchendo todos os campos obrigatórios do formulário. O código deve conter 3 caracteres, sendo os 2 primeiros obrigatoriamente letras (@figu-criar-tac).
+O usuário com Função de *Instituição Admin* pode criar um **TAC** preenchendo todos os campos obrigatórios do formulário. O código deve conter 3 caracteres, sendo os 2 primeiros obrigatoriamente letras (@figu-criar-tac).
 
 ::: {#figu-criar-tac}
 ```{r}
@@ -23,12 +23,17 @@ knitr::include_graphics("images/06_tacs/criar-tac.png")
 Criar TAC
 :::
 
-O campo **Data de Assinatura** será exibido após o preenchimento deste campo no Sistema de Cadastro de TACs. Quando preenchido, o sistema validará se a data de abertura da recomendação é anterior à data de assinatura do TAC.
+O campo **Data de Assinatura** refere-se à data de assinatura do TAC. Quando preenchido, durante o processo de validação das planilhas, o Sisvar checará se a data de abertura da recomendação é anterior à data de assinatura do TAC.
 
-O campo **TAC Referência** também é exibido de acordo com o nome preenchido no Sistema de Cadastro de TACs. Ele serve para, caso necessário, juntar todos os dados de um TAC. Por exemplo, se tivermos um TAC Gongo Soco (RIZZO) e um TAC Gongo Soco (SLR), ambos são provenientes do mesmo TAC. Portanto, ambos teriam a seleção, em TAC Referência, por TAC Gongo Soco. Assim, conseguiríamos fazer uma busca apenas por "Gongo Soco", que juntaria o histórico das duas auditorias dentro desse mesmo TAC.
+O campo **TAC Referência** consiste em uma lista de nomes de TACs preenchidos no Sistema de Cadastro de TACs. Ele serve para, caso necessário, juntar todos os dados de um TAC. 
+
+:::callout-tip
+## Exemplo - TAC Referência
+Dado um TAC Gongo Soco (RIZZO) e um TAC Gongo Soco (SLR), ambos são provenientes do mesmo documento jurídico. Portanto, ambos teriam a seleção, em TAC Referência, por TAC Gongo Soco. Assim, será possível desenvolver meios, no Painel Gerencial, de modo a juntar a visualização de todos os TACs cujo histórico possuam o mesmo TAC Referência.
+:::
 
 ## Exibir
-Ao clicar no botão de ação **Exibir**, o usuário *Instituição Admin* pode visualizar as informações detalhadas dos TACs, incluindo [6.2.1 Submissões](#sec-submissoes), [6.2.2 Responsáveis](#sec-responsaveis), [6.2.3 Nomes alternativos](#sec-nomes), [6.2.4 Planilhas](#sec-planilhas), [6.2.5 Histórico do TAC](#sec-historico).
+Ao clicar no botão de ação **Exibir**, o usuário *Instituição Admin* pode visualizar as informações detalhadas dos TACs, incluindo [Submissões](#sec-submissoes), [Responsáveis](#sec-responsaveis), [Nomes alternativos](#sec-nomes), [Planilhas](#sec-planilhas), [Histórico do TAC](#sec-historico).
 
 ### Submissões {#sec-submissoes}
 O usuário *Instituição Admin* pode submeter e validar planilhas-modelo quando necessário (@figu-submissoes). 
@@ -44,23 +49,22 @@ Tela Submissões
 
 No campo **Descrição** as planilhas submetidas podem apresentar três diferentes resultados:
 
-- Cancelada: quando uma submissão é cancelada antes da finalização do processo de validação.
-- Descartada: quando uma submissão é descartada após a conclusão do processo de validação devido a erros que impedem sua validação.
-- Validada: quando uma submissão é validada após a conclusão do processo de validação sem erros impeditivos.
-
+- *<u>Cancelada</u>*: quando uma submissão é cancelada antes da finalização do processo de validação.
+- *<u>Descartada</u>*: quando uma submissão é descartada após a conclusão do processo de validação devido a erros que impedem sua validação.
+- *<u>Validada</u>*: quando uma submissão é validada após a conclusão do processo de validação sem erros impeditivos.
 
 O processo de validação das planilhas submetidas passa por uma avaliação criteriosa, desde a estrutura do cabeçalho até a última coluna da planilha. As inconsistências encontradas podem ser classificadas como:
 
-- Aviso: permite que a submissão seja validada, após o usuário checar todos os avisos apresentados;
-- Erro: impede que a submissão seja validada. A submissão deve ser descartada e outra submissão deve ser realizada para nova rodada de validação.
+- *<u>Aviso</u>*: permite que a submissão seja validada, após o usuário checar todos os avisos apresentados;
+- *<u>Erro</u>*: impede que a submissão seja validada. A submissão deve ser descartada e outra submissão deve ser realizada para nova rodada de validação.
 
-::: {.callout}
+:::callout-note
 ## Nota
-Em caso de recomendações com inconsistências do tipo Aviso e Erro na mesma submissão, o procedimento segue o caso mais restritivo, ou seja, **Erro**.
+Em caso de recomendações com inconsistências do tipo _Aviso_ e _Erro_ na mesma submissão, o procedimento segue o caso mais restritivo, ou seja, ***Erro***.
 :::
 
 ### Responsáveis {#sec-responsaveis}
-Nesta aba, o usuário *Instituição Admin* pode visualizar os responsáveis ou criar um **Novo Responsável** que será adicionado à lista de usuários aptos a enviar planilhas para determinado TAC (@figu-responsaveis). 
+Nesta aba, o usuário *Instituição Admin* pode visualizar os responsáveis, bem como atribuir um **Responsável** para determinado TAC (@figu-responsaveis).
 
 ::: {#figu-responsaveis}
 ```{r}
@@ -71,8 +75,13 @@ knitr::include_graphics("images/06_tacs/responsaveis.png")
 Tela Responsáveis
 :::
 
+:::callout-note
+## Nota
+A lista de usuários passíveis de atribuição para determinado TAC corresponde ao rol de usuários **Responsável** de uma Auditoria. 
+:::
+
 ### Nomes alternativos {#sec-nomes}
-Nesta aba, o usuário *Instituição Admin* pode visualizar os nomes alternativos do TAC (quando houver) ou criar um **Novo Nome Alternativo** e definí-lo como principal (@figu-nomes).
+Nesta aba, o usuário *Instituição Admin* pode visualizar os nomes alternativos do TAC (quando houver) ou criar um **Nome Alternativo**. Também é possível definir um nome alternativo como principal (@figu-nomes).
 
 ::: {#figu-nomes}
 ```{r}
@@ -83,21 +92,21 @@ knitr::include_graphics("images/06_tacs/nomes.png")
 Tela Nomes alternativos
 :::
 
-Por padrão, não existe um “nome fantasia” para um TAC. O CIGA criou esses nomes para facilitar a identificação. As auditorias também criaram seus próprios “nomes fantasia”, o que pode resultar em discrepâncias entre os nomes dos TACs cadastrados no CIGA e os utilizados pelas auditorias (que podem usar nomes muito longos, sem acentuação ou até mesmo em inglês).
+Por padrão, não existe um "nome fantasia" para um TAC. O CIGA criou esses nomes para facilitar a identificação. As auditorias também criaram seus próprios “nomes fantasia”, o que pode resultar em discrepâncias entre os nomes dos TACs cadastrados no CIGA e os utilizados pelas auditorias (que podem usar nomes muito longos, sem acentuação ou até mesmo em inglês).
 
-Neste sentido, para evitar que a validação seja impedida de ocorrer devido a diferenças nos “nomes fantasia”, é possível criar nomes alternativos (conhecidos como “alias” em inglês).;
+Neste sentido, para evitar que a validação seja impedida de ocorrer devido a diferenças nos "nomes fantasia", é possível criar nomes alternativos (conhecidos como "_alias_" em inglês). O nome alternativo, assim como o nome fantasia, é único, não sendo possível ocorrer repetição desses nomes no Sisvar.
 
-::: {.callout}
-## Nota
-O nome alternativo, assim como o nome fantasia, é único. Portanto, é importante orientar as auditorias sobre essa questão. Por exemplo, se a RIZZO utilizasse “TAC Gongo Soco” em sua planilha e já tivesse criado esse nome alternativo, a SLR, ao assumir Gongo Soco, não conseguiria utilizar “TAC Gongo Soco” em sua planilha.
+:::callout-tip
+## Exemplo - Nome Alternativo
+Se a RIZZO utilizasse "TAC Gongo Soco" em sua planilha e já tivesse criado um nome alternativo como "Gongo Soco", a SLR, ao assumir esse TAC, não conseguiria utilizar "TAC Gongo Soco" nem "Gongo Soco" em sua planilha. Um novo nome alternativo - ou o próprio valor do campo TAC, na planilha-modelo - deverão ser criados diferentemente aos nomes já definidos no Sisvar.
 :::
 
 ### Planilhas {#sec-planilhas}
 Nesta aba, o usuário *Instituição Admin* pode baixar três tipos de planilhas (@figu-planilhas):
 
-- Planilha-modelo em branco: versão mais recente da planilha-modelo em branco;
-- Planilha mais recente validada com sucesso: planilha mais recente com submissão validada;
-- Planilha de conversão de IDs: planilha que relaciona o ID do TAC com o ID CIGA.
+- *<u>Planilha-modelo em branco</u>*: versão mais recente da planilha-modelo em branco;
+- *<u>Planilha mais recente validada com sucesso</u>*: planilha mais recente com submissão validada;
+- *<u>Planilha de conversão de IDs</u>*: planilha que relaciona o ID do TAC com o ID CIGA.
 
 ::: {#figu-planilhas}
 ```{r}
@@ -121,7 +130,7 @@ Tela Histórico do TAC
 :::
 
 ## Editar
-O botão de ação **Editar** permite ao usuário *Instituição Admin* modificar as informações de qualquer TAC, com ênfase na alteração da Situação(@figu-editar-tac). 
+O botão de ação **Editar** permite ao usuário *Instituição Admin* modificar as informações de qualquer TAC, com ênfase na alteração da Situação (@figu-editar-tac). 
 
 ::: {#figu-editar-tac}
 ```{r}
@@ -132,8 +141,13 @@ knitr::include_graphics("images/06_tacs/editar-tac.png")
 Tela Editar
 :::
 
+:::callout-important
+## Atenção
+A alteração de Situação para *Extinta* ou *Encerrada* é irreversível. Além disso, TACs extintos ou encerrados ficam impossibilitados de receber submissões.
+:::
+
 ## Excluir
-O botão de ação **Excluir** permite ao usuário *Instituição Admin* remover TACs. Não é possível excluir um TAC com recomendações em aberto (@figu-excluir-tac).
+O botão de ação **Excluir** permite ao usuário *Instituição Admin* remover TACs. Não é possível excluir um TAC se há recomendações associadas a ele. Assim, só é possível a exclusão caso nenhuma recomendação tenha sido emitida para esse TAC (@figu-excluir-tac).
 
 ::: {#figu-excluir-tac}
 ```{r}
