--- a/manual_admin/06_tacs.qmd
+++ b/manual_admin/06_tacs.qmd
@@ -50,7 +50,7 @@ Tela Submissões
 No campo **Descrição** as planilhas submetidas podem apresentar três diferentes resultados:
 
 - *<u>Cancelada</u>*: quando uma submissão é cancelada antes da finalização do processo de validação.
-- *<u>Descartada</u>*: quando uma submissão é descartada após a conclusão do processo de validação devido a erros que impedem sua validação.
+- *<u>Descartada</u>*: quando uma submissão é descartada após a conclusão do processo de validação em função de erros que impedem sua validação.
 - *<u>Validada</u>*: quando uma submissão é validada após a conclusão do processo de validação sem erros impeditivos.
 
 O processo de validação das planilhas submetidas passa por uma avaliação criteriosa, desde a estrutura do cabeçalho até a última coluna da planilha. As inconsistências encontradas podem ser classificadas como:
@@ -94,11 +94,15 @@ Tela Nomes alternativos
 
 Por padrão, não existe um "nome fantasia" para um TAC. O CIGA criou esses nomes para facilitar a identificação. As auditorias também criaram seus próprios “nomes fantasia”, o que pode resultar em discrepâncias entre os nomes dos TACs cadastrados no CIGA e os utilizados pelas auditorias (que podem usar nomes muito longos, sem acentuação ou até mesmo em inglês).
 
-Neste sentido, para evitar que a validação seja impedida de ocorrer devido a diferenças nos "nomes fantasia", é possível criar nomes alternativos (conhecidos como "_alias_" em inglês). O nome alternativo, assim como o nome fantasia, é único, não sendo possível ocorrer repetição desses nomes no Sisvar.
+Neste sentido, para evitar que a validação seja impedida de ocorrer em função de diferenças nos "nomes fantasia", é possível criar nomes alternativos (conhecidos como "_alias_" em inglês). O nome alternativo, assim como o nome fantasia, é único, não sendo possível ocorrer repetição desses nomes no Sisvar.
 
 :::callout-tip
 ## Exemplo - Nome Alternativo
 Se a RIZZO utilizasse "TAC Gongo Soco" em sua planilha e já tivesse criado um nome alternativo como "Gongo Soco", a SLR, ao assumir esse TAC, não conseguiria utilizar "TAC Gongo Soco" nem "Gongo Soco" em sua planilha. Um novo nome alternativo - ou o próprio valor do campo TAC, na planilha-modelo - deverão ser criados diferentemente aos nomes já definidos no Sisvar.
+:::
+
+:::callout-important
+TACs com diferentes datas de assinatura e/ou escopos devem ser incluídos separadamente e ter sua submissão de forma individual no Sisvar.
 :::
 
 ### Planilhas {#sec-planilhas}
